[package]
name = "ccx_rust"
version = "0.1.0"
authors = ["PunitLodha <punitlodha@pm.me>"]
description = "Rust library for CCExtractor"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
log = "0.4.0"
env_logger = "0.8.4"
iconv = "0.1.1"
palette = "0.6.0"
rsmpeg = { version = "0.14.1", optional = true, features = [
    "link_system_ffmpeg",
] }
tesseract-sys = { version = "0.5.14", optional = true, default-features = false }
leptonica-sys = { version = "0.4.3", optional = true, default-features = false }
clap = { version = "4.3.19", features = ["derive"] }
strum = "0.25"
strum_macros = "0.25"
time = "0.3.25"
num-integer = "0.1.45"
num-traits = "0.2.16"
winapi = "0.3.9"
cfg-if = "1.0.0"
sha2 = "0.10.7"

[build-dependencies]
bindgen = "0.58.1"

[features]
hardsubx_ocr = ["rsmpeg", "tesseract-sys", "leptonica-sys"]
