[package]
name = "lib_ccxr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.9.0"
thiserror = "1.0.69"
time = { version = "0.3.39", features = ["macros", "formatting"] }
derive_more = "0.99.19"
url = "2.5.4"
strum = "0.26.3"
strum_macros = "0.26.4"
crc32fast = "1.4.2"
num_enum = "0.6.1"
tempfile = "3.19.1"
memoffset = "0.9.1"
palette = "0.7.6"
byteorder = "1.5.0"

[features]
default = [
  "enable_sharing",
  "wtv_debug",
  "enable_ffmpeg",
  "debug",
  "with_libcurl",
]
enable_sharing = []
wtv_debug = []
enable_ffmpeg = []
debug_out = []
debug = []
with_libcurl = []
