[package]
name = "lib_ccxr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.9.0"
thiserror = "2.0"
time = { version = "0.3.39", features = ["macros", "formatting"] }
derive_more = { version = "2.0", features = ["add", "not"] }
url = "2.5.4"
num_enum = "0.7.3"
socket2 = "0.6"
strum = "0.27"
strum_macros = "0.27"
crc32fast = "1.4.2"

[features]
default = [
  "wtv_debug",
  "enable_ffmpeg",
  "debug",
  "with_libcurl",
]
wtv_debug = []
enable_ffmpeg = []
debug_out = []
debug = []
with_libcurl = []
